# libphx

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake  build_luajit_msvc.bat
ext/glad/include/glad/: gl.h
ext/glad/src/: gl.c
include/: Audio.h  AudioBackend.h  Bullet.h  Button.h  CollisionShape.h  OpenGL.h  Physics.h  SDL.h  Sound.h  SoundDef.h  SoundDesc.h
script/ffi/: Audio.lua  BSP.lua  Sound.lua
script/ffiext/: BSP.lua
src/: Audio.cpp  AudioBackend_SDL3.cpp  BSP.cpp  Button.cpp  Bytes.cpp  CollisionShape.cpp  Engine.cpp  Gamepad.cpp  GamepadAxis.cpp  GamepadButton.cpp  Input.cpp  Joystick.cpp  Keyboard.cpp  Mesh.cpp  Mouse.cpp  OS.cpp  OpenGL.cpp  Physics.cpp  RigidBody.cpp  Sound.cpp  SoundDesc.cpp  StrMap.cpp  Window.cpp  WindowMode.cpp
